--- a/employee-intranet.html
+++ b/employee-intranet.html
@@ -40,15 +40,12 @@
     <title>Logo and hexagon pattern</title>
     <svg x="50%" overflow="visible" id="hex-group">
       <a href="http://www.osmre.gov" title="OSMRE website" target="_blank">
-        <polygon fill="#c9d3d6" points="96.9,84.5 49.3,112 1.6,84.5 1.6,29.5 49.3,2 96.9,29.5" transform="matrix(1,0,0,1,-55,110)"></polygon>
-        <image height="75" width="75" x="11" y="20" xmlns:xlink="http://www.w3.org/1999/xlink" xlink:href="assets/images/osmre-logo.png" transform="matrix(1,0,0,1,-55,110)"></image>
+        <polygon fill="#fff" points="96.9,84.5 49.3,112 1.6,84.5 1.6,29.5 49.3,2 96.9,29.5" transform="matrix(1,0,0,1,-55,110)"></polygon>
+        <image height="75" width="75" x="11" y="20" xmlns:xlink="http://www.w3.org/1999/xlink" xlink:href="assets/images/osmre-logo.png" transform="matrix(1,0,0,1,-55,110)" alt="OSMRE logo"></image>
       </a>
     </svg>
   </svg>
   <section id="project-container">
-    <div class="button-wrapper">
-      <a href="index.html#featuredProjects" title="Featured Projects" class="basic-button basic-button-outline center">Other Featured Projects</a>
-    </div>
     <h2>Employee Intranet</h2>
     <h3>Problem</h3>
     <p>Employee Intranet was out-of-date and difficult to use, resulting in low usage and inconsistent internal communication.</p>
@@ -66,6 +63,9 @@
     <p>Many staff members were using an employee directory on OSMRE’s public-facing website to access contact information. I wanted to create a feature on the employee intranet that would function both as a phone chart and an organizational chart. I chose to re-design them both to be based on the same JSON file to reduce the amount of time spent updating the two directories.</p>
     <p>I created an excel spreadsheet with employee information and then converted to JSON. This way, someone who was not technical could update the excel spreadsheet and replace the JSON file on both the public website and employee intranet.</p>
     <p>For the design, I created a hierarchical structure where a user could expand each region, branch and division and see the corresponding manager and employees. Clicking on an individual’s name would reveal contact information and a summary of their responsibilities. </p>
+    <div class="button-wrapper">
+      <a href="index.html#featuredProjects" title="Featured Projects" class="basic-button basic-button-outline center">Other Featured Projects</a>
+    </div>
   </section>
   <footer class="footer" role="contentinfo">
       <a href="https://github.com/skcain/skcain.github.io" target="_blank">View source on Github</a>
