--- a/posting-pro.html
+++ b/posting-pro.html
@@ -52,15 +52,12 @@
     <title>Logo and hexagon pattern</title>
     <svg x="50%" overflow="visible" id="hex-group">
       <a href="http://www.codeforamerica.org" title="Code for America website" target="_blank">
-        <polygon fill="#c9d3d6" points="96.9,84.5 49.3,112 1.6,84.5 1.6,29.5 49.3,2 96.9,29.5" transform="matrix(1,0,0,1,-55,110)"></polygon>
-        <image height="75" width="75" x="11" y="20" xmlns:xlink="http://www.w3.org/1999/xlink" xlink:href="assets/images/cfa-logo.png" transform="matrix(1,0,0,1,-55,110)"></image>
+        <polygon fill="#fff" points="96.9,84.5 49.3,112 1.6,84.5 1.6,29.5 49.3,2 96.9,29.5" transform="matrix(1,0,0,1,-55,110)"></polygon>
+        <image height="75" width="75" x="11" y="20" xmlns:xlink="http://www.w3.org/1999/xlink" xlink:href="assets/images/cfa-logo.png" transform="matrix(1,0,0,1,-55,110)" alt="Code for America logo"></image>
       </a>
     </svg>
   </svg>
   <section id="project-container">
-    <div class="button-wrapper">
-      <a href="index.html#featuredProjects" title="Featured Projects" class="basic-button basic-button-outline center">Other Featured Projects</a>
-    </div>
     <h2>Posting Pro</h2>
     <p class="centered"><a href="https://posting-pro.herokuapp.com/" title="Posting Pro" target="_blank">https://posting-pro.herokuapp.com/</a></p>
 
@@ -126,6 +123,9 @@
         <div class="flex-image"><img src="assets/images/posting-pro/thumbnails/postingPro.gif" alt="A gif that moves through the screens on one version of Posting Pro."></div>
         <small>User interface</small>
       </a>
+    </div>
+    <div class="button-wrapper">
+      <a href="index.html#featuredProjects" title="Featured Projects" class="basic-button basic-button-outline center">Other Featured Projects</a>
     </div>
   </section>
   <footer class="footer" role="contentinfo">
