--- a/spr-posters.html
+++ b/spr-posters.html
@@ -40,16 +40,12 @@
     <title>Logo and hexagon pattern</title>
     <svg x="50%" overflow="visible" id="hex-group">
       <a href="http://www.osmre.gov" title="OSMRE website" target="_blank">
-        <polygon fill="#c9d3d6" points="96.9,84.5 49.3,112 1.6,84.5 1.6,29.5 49.3,2 96.9,29.5" transform="matrix(1,0,0,1,-55,110)"></polygon>
-        <image height="75" width="75" x="11" y="20" xmlns:xlink="http://www.w3.org/1999/xlink" xlink:href="assets/images/osmre-logo.png" transform="matrix(1,0,0,1,-55,110)"></image>
+        <polygon fill="#fff" points="96.9,84.5 49.3,112 1.6,84.5 1.6,29.5 49.3,2 96.9,29.5" transform="matrix(1,0,0,1,-55,110)"></polygon>
+        <image height="75" width="75" x="11" y="20" xmlns:xlink="http://www.w3.org/1999/xlink" xlink:href="assets/images/osmre-logo.png" transform="matrix(1,0,0,1,-55,110)" alt="OSMRE logo"></image>
       </a>
     </svg>
   </svg>
   <section id="project-container">
-    <div class="button-wrapper">
-      <a href="index.html#featuredProjects" title="Featured Projects" class="basic-button basic-button-outline center">Other Featured Projects</a>
-    </div>
-
     <h2>Stream Protection Rule Posters</h2>
     <h3>Problem</h3>
     <p>The Stream Protection Rule required a series of meetings to inform and gather comments from the public on the various aspects of regulation.</p>
@@ -61,6 +57,9 @@
     <p>Office of Surface Mining Reclamation and Enforcement (OSMRE) was working to protect streams near mining operations, and needed new visual designs to raise awareness of key issues. The graphics team was asked to create seven posters that would be used as educational tools during public meetings for the Stream Protection Rule.</p>
     <p>I managed development for three of the posters: Protection of Hydrologic Balance, Revegetation, Soil and Fish and Wildlife Protection and Coal Regions. I worked with a policy expert in each area who ensured that the design accurately represented the new regulations.</p>
     <p>I started by interviewing and learning from the experts and then asked them to sketch their ideas. I refined the sketches, gathered more feedback and began building in Illustrator. I worked closely with members of OSMRE’s graphics team to ensure a cohesive brand across the different designs. We would occasionally swap files to improve details. After managing several rounds of approval, the designs were ready for print.</p>
+    <div class="button-wrapper">
+      <a href="index.html#featuredProjects" title="Featured Projects" class="basic-button basic-button-outline center">Other Featured Projects</a>
+    </div>
   </section>
   <footer class="footer" role="contentinfo">
       <a href="https://github.com/skcain/skcain.github.io" target="_blank">View source on Github</a>
