--- a/osmre-website.html
+++ b/osmre-website.html
@@ -40,18 +40,18 @@
     <title>Logo and hexagon pattern</title>
     <svg x="50%" overflow="visible" id="hex-group">
       <a href="http://www.osmre.gov" title="OSMRE website" target="_blank">
-        <polygon fill="#c9d3d6" points="96.9,84.5 49.3,112 1.6,84.5 1.6,29.5 49.3,2 96.9,29.5" transform="matrix(1,0,0,1,-55,110)"></polygon>
-        <image height="75" width="75" x="11" y="20" xmlns:xlink="http://www.w3.org/1999/xlink" xlink:href="assets/images/osmre-logo.png" transform="matrix(1,0,0,1,-55,110)"></image>
+        <polygon fill="#fff" points="96.9,84.5 49.3,112 1.6,84.5 1.6,29.5 49.3,2 96.9,29.5" transform="matrix(1,0,0,1,-55,110)"></polygon>
+        <image height="75" width="75" x="11" y="20" xmlns:xlink="http://www.w3.org/1999/xlink" xlink:href="assets/images/osmre-logo.png" transform="matrix(1,0,0,1,-55,110)" alt="OSMRE logo"></image>
       </a>
     </svg>
   </svg>
   <section id="project-container">
-    <div class="button-wrapper">
-      <a href="index.html#featuredProjects" title="Featured Projects" class="basic-button basic-button-outline center">Other Featured Projects</a>
-    </div>
     <h2>OSMRE Website</h2>
     <p class="centered"><a href="http://www.osmre.gov" title="Office of Surface Mining Reclamation and Enforcement website" target="_blank">www.osmre.gov</a></p>
     <p>This project is under construction.</p>
+    <div class="button-wrapper">
+      <a href="index.html#featuredProjects" title="Featured Projects" class="basic-button basic-button-outline center">Other Featured Projects</a>
+    </div>
     <!--<h3>Problem</h3>
     <p></p>
 
