--- a/portfolio.html
+++ b/portfolio.html
@@ -51,13 +51,11 @@
     </defs>
     <title>Logo and hexagon pattern</title>
     <svg x="50%" overflow="visible" id="hex-group">
-      <polygon fill="#c9d3d6" points="96.9,84.5 49.3,112 1.6,84.5 1.6,29.5 49.3,2 96.9,29.5" transform="matrix(1,0,0,1,-55,110)"></polygon>
+      <polygon fill="#fff" points="96.9,84.5 49.3,112 1.6,84.5 1.6,29.5 49.3,2 96.9,29.5" transform="matrix(1,0,0,1,-55,110)"></polygon>
+      <image height="75" width="75" x="11" y="20" xmlns:xlink="http://www.w3.org/1999/xlink" xlink:href="assets/images/portfolio-icon.png" transform="matrix(1,0,0,1,-55,110)" alt="Portfolio Icon"></image>
     </svg>
   </svg>
   <section id="project-container">
-    <div class="button-wrapper">
-      <a href="index.html#featuredProjects" title="Featured Projects" class="basic-button basic-button-outline center">Other Featured Projects</a>
-    </div>
     <h2>Online Portfolio Process</h2>
     <p class="centered"><a href="http://scain.design" title="Personal Portfolio" target="_blank">scain.design</a></p>
 
@@ -109,6 +107,9 @@
         <div class="flex-image"><img src="assets/images/portfolio/portfolio-sketches2.jpg" alt="Planning in sketchbook on what should be included"></div>
         <small>Sketching</small>
       </a>
+    </div>
+    <div class="button-wrapper">
+      <a href="index.html#featuredProjects" title="Featured Projects" class="basic-button basic-button-outline center">Other Featured Projects</a>
     </div>
   </section>
   <footer class="footer" role="contentinfo">
