--- a/web-request-system.html
+++ b/web-request-system.html
@@ -40,16 +40,12 @@
     <title>Logo and hexagon pattern</title>
     <svg x="50%" overflow="visible" id="hex-group">
       <a href="http://www.osmre.gov" title="OSMRE website" target="_blank">
-        <polygon fill="#c9d3d6" points="96.9,84.5 49.3,112 1.6,84.5 1.6,29.5 49.3,2 96.9,29.5" transform="matrix(1,0,0,1,-55,110)"></polygon>
-        <image height="75" width="75" x="11" y="20" xmlns:xlink="http://www.w3.org/1999/xlink" xlink:href="assets/images/osmre-logo.png" transform="matrix(1,0,0,1,-55,110)"></image>
+        <polygon fill="#fff" points="96.9,84.5 49.3,112 1.6,84.5 1.6,29.5 49.3,2 96.9,29.5" transform="matrix(1,0,0,1,-55,110)"></polygon>
+        <image height="75" width="75" x="11" y="20" xmlns:xlink="http://www.w3.org/1999/xlink" xlink:href="assets/images/osmre-logo.png" transform="matrix(1,0,0,1,-55,110)" alt="OSMRE logo"></image>
       </a>
     </svg>
   </svg>
   <section id="project-container">
-    <div class="button-wrapper">
-      <a href="index.html#featuredProjects" title="Featured Projects" class="basic-button basic-button-outline center">Other Featured Projects</a>
-    </div>
-
     <h2>Web Request System</h2>
 
     <h3>Problem</h3>
@@ -78,6 +74,9 @@
     <h4>Prototype</h4>
     <p>Many of the employees were accustomed to using SharePoint to submit web requests, so I chose to build upon what was already being used. Throughout the build process, I asked for feedback from key users who frequented the system. I observed them interacting with the system so that I was able to identify barriers in the design. I presented at staff meetings, teaching how to use the tool and recruiting additional feedback.</p>
     <p>Eventually, the tool was comprehensive enough to be used as the first version of a universal web request submission system. I taught the remaining web developers how to maintain the new system before I left to join Code for America as a 2016 fellow.</p>
+    <div class="button-wrapper">
+      <a href="index.html#featuredProjects" title="Featured Projects" class="basic-button basic-button-outline center">Other Featured Projects</a>
+    </div>
   </section>
   <footer class="footer" role="contentinfo">
       <a href="https://github.com/skcain/skcain.github.io" target="_blank">View source on Github</a>
