--- a/resume.html
+++ b/resume.html
@@ -37,10 +37,28 @@
       <a href="resume.pdf" title="Download resume" target="_blank" class="basic-button basic-button-outline center">Download resume</a>
     </div>
     <h2>Resume</h2>
-    <p class="center">I have 10 years of professional experience and 4 years of industry experience.</p>
+    <p class="centered">I have 10 years of professional experience and 4 years of industry experience.</p>
 
-    <div id="fellow">
-      <a href="http://www.codeforamerica.org" title="Code for America Website" target="_blank"><img src="assets/images/cfa-logo.png" alt="Code for America logo"/></a>
+    <div class="experience">
+      <svg version="1.1" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" x="0px" y="0px" viewBox="0 0 611 204.6">
+        <style type="text/css">
+        	.greenOutline{fill:none;stroke:#c9d3d6;stroke-width:1;stroke-miterlimit:10;}
+        	.whiteFill{fill:none;}
+        </style>
+        <polygon class="greenOutline" points="606.9,84.5 559.3,112 511.6,84.5 511.6,29.5 559.3,2 606.9,29.5 "/>
+        <polygon class="greenOutline" points="504.9,84.5 457.3,112 409.6,84.5 409.6,29.5 457.3,2 504.9,29.5 "/>
+        <polygon class="greenOutline" points="402.9,84.5 355.3,112 307.6,84.5 307.6,29.5 355.3,2 402.9,29.5 "/>
+        <polygon class="greenOutline" points="300.9,84.5 253.3,112 205.6,84.5 205.6,29.5 253.3,2 300.9,29.5 "/>
+        <polygon class="greenOutline" points="198.9,84.5 151.3,112 103.6,84.5 103.6,29.5 151.3,2 198.9,29.5 "/>
+        <polygon class="greenOutline" points="96.9,84.5 49.3,112 1.6,84.5 1.6,29.5 49.3,2 96.9,29.5 "/>
+        <polygon class="greenOutline" points="555.4,173.2 507.8,200.7 460.1,173.2 460.1,118.2 507.8,90.7 555.4,118.2 "/>
+        <polygon class="greenOutline" points="453.4,173.2 405.8,200.7 358.1,173.2 358.1,118.2 405.8,90.7 453.4,118.2 "/>
+        <polygon class="whiteFill" points="351.4,173.2 303.8,200.7 256.1,173.2 256.1,118.2 303.8,90.7 351.4,118.2 "/>
+        <polygon class="greenOutline" points="249.4,173.2 201.8,200.7 154.1,173.2 154.1,118.2 201.8,90.7 249.4,118.2 "/>
+        <polygon class="greenOutline" points="147.4,173.2 99.8,200.7 52.1,173.2 52.1,118.2 99.8,90.7 147.4,118.2 "/>
+        <a href="http://www.codeforamerica.org" title="Code for America Website" target="_blank"><image height="75" width="75" x="52.5%" y="0" xmlns:xlink="http://www.w3.org/1999/xlink" xlink:href="assets/images/cfa-logo.png" transform="matrix(1,0,0,1,-55,110)" alt="Code for America logo"></image></a>
+      </svg>
+
       <h3>2016 Fellow</h3>
       <h4>Code for America</h4>
       <p>I am working on a team of three with the City of New Orleans on workforce development projects. We’re building digital tools that assist employers in finding better-matched candidates, and prepare and connect job seekers to careers.</p>
@@ -63,8 +81,25 @@
       </div>
     </div>
 
-    <div id="vis">
-      <a href="http://www.osmre.gov" title="Office of Surface Mining Reclamation and Enforcement Website" target="_blank"><img src="assets/images/osmre-logo.png" alt="Office of Surface Mining Reclamation and Enforcement logo"/></a>
+    <div class="experience">
+      <svg version="1.1" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" x="0px" y="0px" viewBox="0 0 611 204.6">
+        <style type="text/css">
+        	.greenOutline{fill:none;stroke:#c9d3d6;stroke-width:1;stroke-miterlimit:10;}
+        	.whiteFill{fill:none;}
+        </style>
+        <polygon class="greenOutline" points="606.9,84.5 559.3,112 511.6,84.5 511.6,29.5 559.3,2 606.9,29.5 "/>
+        <polygon class="greenOutline" points="504.9,84.5 457.3,112 409.6,84.5 409.6,29.5 457.3,2 504.9,29.5 "/>
+        <polygon class="greenOutline" points="402.9,84.5 355.3,112 307.6,84.5 307.6,29.5 355.3,2 402.9,29.5 "/>
+        <polygon class="greenOutline" points="300.9,84.5 253.3,112 205.6,84.5 205.6,29.5 253.3,2 300.9,29.5 "/>
+        <polygon class="greenOutline" points="198.9,84.5 151.3,112 103.6,84.5 103.6,29.5 151.3,2 198.9,29.5 "/>
+        <polygon class="greenOutline" points="96.9,84.5 49.3,112 1.6,84.5 1.6,29.5 49.3,2 96.9,29.5 "/>
+        <polygon class="greenOutline" points="555.4,173.2 507.8,200.7 460.1,173.2 460.1,118.2 507.8,90.7 555.4,118.2 "/>
+        <polygon class="greenOutline" points="453.4,173.2 405.8,200.7 358.1,173.2 358.1,118.2 405.8,90.7 453.4,118.2 "/>
+        <polygon class="whiteFill" points="351.4,173.2 303.8,200.7 256.1,173.2 256.1,118.2 303.8,90.7 351.4,118.2 "/>
+        <polygon class="greenOutline" points="249.4,173.2 201.8,200.7 154.1,173.2 154.1,118.2 201.8,90.7 249.4,118.2 "/>
+        <polygon class="greenOutline" points="147.4,173.2 99.8,200.7 52.1,173.2 52.1,118.2 99.8,90.7 147.4,118.2 "/>
+        <a href="http://www.osmre.gov" title="Office of Surface Mining Reclamation and Enforcement Website" target="_blank"><image height="75" width="75" x="52.5%" y="0" xmlns:xlink="http://www.w3.org/1999/xlink" xlink:href="assets/images/osmre-logo.png" transform="matrix(1,0,0,1,-55,110)" alt="OSMRE logo"></image></a>
+      </svg>
       <h3>Visual Information Specialist</h3>
       <h4>Office of Surface Mining Reclamation and Enforcement</h4>
       <p>I participated in the Graphics, Web and Video Development teams to create publications in support of the bureau’s mission. I also worked to redesign systems to improve efficiency and better serve users.</p>
@@ -109,8 +144,25 @@
       </div>
     </div>
 
-    <div id="intern">
-      <a href="http://www.osmre.gov" title="Office of Surface Mining Reclamation and Enforcement Website" target="_blank"><img src="assets/images/osmre-logo.png" alt="Office of Surface Mining Reclamation and Enforcement logo"/></a>
+    <div class="experience">
+      <svg version="1.1" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" x="0px" y="0px" viewBox="0 0 611 204.6">
+        <style type="text/css">
+        	.greenOutline{fill:none;stroke:#c9d3d6;stroke-width:1;stroke-miterlimit:10;}
+        	.whiteFill{fill:none;}
+        </style>
+        <polygon class="greenOutline" points="606.9,84.5 559.3,112 511.6,84.5 511.6,29.5 559.3,2 606.9,29.5 "/>
+        <polygon class="greenOutline" points="504.9,84.5 457.3,112 409.6,84.5 409.6,29.5 457.3,2 504.9,29.5 "/>
+        <polygon class="greenOutline" points="402.9,84.5 355.3,112 307.6,84.5 307.6,29.5 355.3,2 402.9,29.5 "/>
+        <polygon class="greenOutline" points="300.9,84.5 253.3,112 205.6,84.5 205.6,29.5 253.3,2 300.9,29.5 "/>
+        <polygon class="greenOutline" points="198.9,84.5 151.3,112 103.6,84.5 103.6,29.5 151.3,2 198.9,29.5 "/>
+        <polygon class="greenOutline" points="96.9,84.5 49.3,112 1.6,84.5 1.6,29.5 49.3,2 96.9,29.5 "/>
+        <polygon class="greenOutline" points="555.4,173.2 507.8,200.7 460.1,173.2 460.1,118.2 507.8,90.7 555.4,118.2 "/>
+        <polygon class="greenOutline" points="453.4,173.2 405.8,200.7 358.1,173.2 358.1,118.2 405.8,90.7 453.4,118.2 "/>
+        <polygon class="whiteFill" points="351.4,173.2 303.8,200.7 256.1,173.2 256.1,118.2 303.8,90.7 351.4,118.2 "/>
+        <polygon class="greenOutline" points="249.4,173.2 201.8,200.7 154.1,173.2 154.1,118.2 201.8,90.7 249.4,118.2 "/>
+        <polygon class="greenOutline" points="147.4,173.2 99.8,200.7 52.1,173.2 52.1,118.2 99.8,90.7 147.4,118.2 "/>
+        <a href="http://www.osmre.gov" title="Office of Surface Mining Reclamation and Enforcement Website" target="_blank"><image height="75" width="75" x="52.5%" y="0" xmlns:xlink="http://www.w3.org/1999/xlink" xlink:href="assets/images/osmre-logo.png" transform="matrix(1,0,0,1,-55,110)" alt="OSMRE logo"></image></a>
+      </svg>
       <h3>Web Design Intern</h3>
       <h4>AmeriCorps/Office of Surface Mining Reclamation and Enforcement</h4>
       <p>I worked at the Office of Surface Mining Reclamation and Enforcement to assist with web and graphic development. Worked with the web team to begin redesign of national and regional websites.</p>
