Edited alt images
Edited alt images

--- a/portfolio.html
+++ b/portfolio.html
@@ -94,7 +94,7 @@
         <small>Word map</small>
       </a>
       <a class="fancybox flex-box" rel="group" href="assets/images/portfolio/portfolio-sketches.jpg">
-        <div class="flex-image"><img src="assets/images/portfolio/portfolio-sketches.jpg" alt="Planning in sketchbook to identify and narrow down work to include"></div>
+        <div class="flex-image"><img src="assets/images/portfolio/portfolio-sketches.jpg" alt="Planning in sketchbook to identify projects for portfolio"></div>
         <small>Sketching</small>
       </a>
     </div>
