--- a/posting-pro.html
+++ b/posting-pro.html
@@ -78,49 +78,49 @@
     <h3>Photos</h3>
     <div class="flex-boxes">
       <a class="fancybox flex-box" rel="group" href="assets/images/posting-pro/planning.jpg">
-        <div class="flex-image"><img src="assets/images/posting-pro/thumbnails/planning.jpg" alt="White board with text written on it describing components of tool and identifying biases to consider."></div>
+        <div class="flex-image"><img src="assets/images/posting-pro/thumbnails/planning.jpg" alt="White board planning describing components of tool and identifying biases to consider"></div>
         <small>White board planning</small>
       </a>
       <a class="fancybox flex-box" rel="group" href="assets/images/posting-pro/journey-map.jpg">
-        <div class="flex-image"><img src="assets/images/posting-pro/thumbnails/journey-map.jpg" alt="Journey map written on post-it notes to describe the journey through the tool."></div>
+        <div class="flex-image"><img src="assets/images/posting-pro/thumbnails/journey-map.jpg" alt="Journey map written on post-it notes describing user journey"></div>
         <small>Post-it note journey map</small>
       </a>
       <a class="fancybox flex-box" rel="group" href="assets/images/posting-pro/sketching.jpg">
-        <div class="flex-image"><img src="assets/images/posting-pro/thumbnails/sketching.jpg" alt="White board sketching of user interface."></div>
+        <div class="flex-image"><img src="assets/images/posting-pro/thumbnails/sketching.jpg" alt="White board sketching of user interface"></div>
         <small>Sketching UI on a whiteboard</small>
       </a>
     </div>
     <div class="flex-boxes">
       <a class="fancybox flex-box" rel="group" href="assets/images/posting-pro/sketching-2.jpg">
-        <div class="flex-image"><img src="assets/images/posting-pro/thumbnails/sketching-2.jpg" alt="White board sketching of user interface."></div>
+        <div class="flex-image"><img src="assets/images/posting-pro/thumbnails/sketching-2.jpg" alt="White board sketching of user interface"></div>
         <small>Sketching UI on a whiteboard</small>
       </a>
       <a class="fancybox flex-box" rel="group" href="assets/images/posting-pro/wireframe.png">
-        <div class="flex-image"><img src="assets/images/posting-pro/thumbnails/wireframe.png" alt="Wireframe design created in Balsalmiq to represent user interface."></div>
+        <div class="flex-image"><img src="assets/images/posting-pro/thumbnails/wireframe.png" alt="Wireframe design created in Balsalmiq to represent user interface"></div>
         <small>Wireframe created in balsamiq of user interface.</small>
       </a>
       <a class="fancybox flex-box" rel="group" href="assets/images/posting-pro/posting-pro-sketches.gif">
-        <div class="flex-image"><img src="assets/images/posting-pro/thumbnails/posting-pro-sketches.gif" alt="A gif that moves through the screens on one version of Posting Pro."></div>
+        <div class="flex-image"><img src="assets/images/posting-pro/thumbnails/posting-pro-sketches.gif" alt="A gif that moves through the screens on one version of Posting Pro"></div>
         <small>User interface</small>
       </a>
     </div>
     <div class="flex-boxes">
       <a class="fancybox flex-box" rel="group" href="assets/images/posting-pro/cost-map.jpg">
-        <div class="flex-image"><img src="assets/images/posting-pro/thumbnails/cost-map.jpg" alt="Post-it notes places on a graph. X-axis is labeled 'Time and Effort' and Y-axis is labeled 'Impact'"></div>
+        <div class="flex-image"><img src="assets/images/posting-pro/thumbnails/cost-map.jpg" alt="Post-it notes on a graph. X-axis represents 'Time and Effort' and Y-axis represents 'Impact'"></div>
         <small>Potential feature cost map measuring time and effort against impact.</small>
       </a>
       <a class="fancybox flex-box" rel="group" href="assets/images/posting-pro/cut-paste.jpg">
-        <div class="flex-image"><img src="assets/images/posting-pro/thumbnails/cut-paste.jpg" alt="Web-based interface is printed out cut into slices, person is re-organizing them."></div>
+        <div class="flex-image"><img src="assets/images/posting-pro/thumbnails/cut-paste.jpg" alt="Web-based interface printed out and cut into slices. Person is re-organizing them"></div>
         <small>Exercise improving usability with existing UI elements.</small>
       </a>
       <a class="fancybox flex-box" rel="group" href="assets/images/posting-pro/word-association.jpg">
-        <div class="flex-image"><img src="assets/images/posting-pro/thumbnails/word-association.jpg" alt="List of word associations to help describe career pathways."></div>
+        <div class="flex-image"><img src="assets/images/posting-pro/thumbnails/word-association.jpg" alt="List of word associations to help describe career pathways"></div>
         <small>Word association list for career pathways</small>
       </a>
     </div>
     <div class="flex-boxes">
       <a class="fancybox flex-box" rel="group" href="assets/images/posting-pro/postingPro.gif">
-        <div class="flex-image"><img src="assets/images/posting-pro/thumbnails/postingPro.gif" alt="A gif that moves through the screens on one version of Posting Pro."></div>
+        <div class="flex-image"><img src="assets/images/posting-pro/thumbnails/postingPro.gif" alt="A gif that moves through the screens on one version of Posting Pro"></div>
         <small>User interface</small>
       </a>
     </div>
