--- a/work-forward-nola.html
+++ b/work-forward-nola.html
@@ -80,21 +80,21 @@
         <small>Workforce triangle</small>
       </a>
       <a class="flex-box fancybox" rel="group" href="assets/images/work-forward-nola/workforce.jpg">
-        <div class="flex-image"><img src="assets/images/work-forward-nola/thumbnails/workforce.jpg" alt="Simplified workforce triangle showing the relationship between Federal, State and local"></div>
+        <div class="flex-image"><img src="assets/images/work-forward-nola/thumbnails/workforce.jpg" alt="Simplified workforce triangle describing the relationship between Federal, State and local agencies"></div>
         <small>Simplified workforce triangle</small>
       </a>
       <a class="flex-box fancybox" rel="group" href="assets/images/work-forward-nola/design-session.jpg">
-        <div class="flex-image"><img src="assets/images/work-forward-nola/thumbnails/design-session.jpg" alt="Several people sitting around a table for a design session"></div>
+        <div class="flex-image"><img src="assets/images/work-forward-nola/thumbnails/design-session.jpg" alt="Several people participating in a design session"></div>
         <small>Photo from design session</small>
       </a>
     </div>
     <div class="flex-boxes">
       <a class="flex-box fancybox" rel="group" href="assets/images/work-forward-nola/journey-map3.jpg">
-        <div class="flex-image"><img src="assets/images/work-forward-nola/thumbnails/journey-map3.jpg" alt="Journey map written on a whiteboard describing how long it would take for a job seeker to become employed"></div>
+        <div class="flex-image"><img src="assets/images/work-forward-nola/thumbnails/journey-map3.jpg" alt="Journey map describing how long it would take for a job seeker to become employed"></div>
         <small>Job seeker journey map</small>
       </a>
       <a class="flex-box fancybox" rel="group" href="assets/images/work-forward-nola/journey-map-2.jpg">
-        <div class="flex-image"><img src="assets/images/work-forward-nola/thumbnails/journey-map-2.jpg" alt="White boarding drawing of a journey map"></div>
+        <div class="flex-image"><img src="assets/images/work-forward-nola/thumbnails/journey-map-2.jpg" alt="White board drawing of a journey map"></div>
         <small>Job seeker journey map</small>
       </a>
       <a class="flex-box fancybox" rel="group" href="assets/images/work-forward-nola/journey-map.jpg">
@@ -132,21 +132,21 @@
     </div>
     <div class="flex-boxes">
       <a class="flex-box fancybox" rel="group" href="assets/images/work-forward-nola/JobSeekerJourneyMap.png">
-        <div class="flex-image"><img src="assets/images/work-forward-nola/thumbnails/JobSeekerJourneyMap.png" alt="Map showing the journey of different people within the workforce system"></div>
+        <div class="flex-image"><img src="assets/images/work-forward-nola/thumbnails/JobSeekerJourneyMap.png" alt="Map showing the journey of people within the workforce system"></div>
         <small>Workforce journey map</small>
       </a>
       <a class="flex-box fancybox" rel="group" href="assets/images/work-forward-nola/WorkforceSystemUserJourney.png">
-        <div class="flex-image"><img src="assets/images/work-forward-nola/thumbnails/WorkforceSystemUserJourney.png" alt="Map showing the journey of different people within the workforce system in New Orleans"></div>
+        <div class="flex-image"><img src="assets/images/work-forward-nola/thumbnails/WorkforceSystemUserJourney.png" alt="Map showing the journey of people within the workforce system in New Orleans"></div>
         <small>Workforce journey map - New Orleans</small>
       </a>
       <a class="flex-box fancybox" rel="group" href="">
-        <div class="flex-image"><img src="assets/images/work-forward-nola/thumbnails/appt.gif" alt="A wireframe of a user interface where a job seeker could schedule an appointment for a visit"></div>
+        <div class="flex-image"><img src="assets/images/work-forward-nola/thumbnails/appt.gif" alt="A wireframe with appointment scheduler for a visit to an opportunity Center"></div>
         <small>Scheduling an appointment wireframe created in balsalmiq</small>
       </a>
     </div>
     <div class="flex-boxes">
       <a class="flex-box fancybox" rel="group" href="assets/images/work-forward-nola/Georgia-career-exploration.png">
-        <div class="flex-image"><img src="assets/images/work-forward-nola/thumbnails/Georgia-career-exploration.png" alt="Wireframe of a career exploration interface"></div>
+        <div class="flex-image"><img src="assets/images/work-forward-nola/thumbnails/Georgia-career-exploration.png" alt="Wireframe of career exploration interface"></div>
         <small>Career exploration wireframe created in balsalmiq</small>
       </a>
       <a class="flex-box fancybox" rel="group" href="assets/images/work-forward-nola/Pascal-career-exploration.png">
@@ -160,15 +160,15 @@
     </div>
     <div class="flex-boxes">
       <a class="flex-box fancybox" rel="group" href="assets/images/work-forward-nola/career-exploration.gif">
-        <div class="flex-image"><img src="assets/images/work-forward-nola/thumbnails/career-exploration.gif" alt="Version of interface where a job seeker could take a career assessment"></div>
+        <div class="flex-image"><img src="assets/images/work-forward-nola/thumbnails/career-exploration.gif" alt="Mock-up of career assessment"></div>
         <small>Career assessment wireframe</small>
       </a>
       <a class="flex-box fancybox" rel="group" href="assets/images/work-forward-nola/portfolio-sketches2.jpg">
-        <div class="flex-image"><img src="assets/images/work-forward-nola/thumbnails/portfolio-sketches2.jpg" alt="Sketching of the home page"></div>
+        <div class="flex-image"><img src="assets/images/work-forward-nola/thumbnails/portfolio-sketches2.jpg" alt="Sketching of a home page"></div>
         <small>Sketching interface</small>
       </a>
       <a class="flex-box fancybox" rel="group" href="assets/images/work-forward-nola/wfnv.2.gif">
-        <div class="flex-image"><img src="assets/images/work-forward-nola/thumbnails/wfnv.2.gif" alt="Gif of the second version"></div>
+        <div class="flex-image"><img src="assets/images/work-forward-nola/thumbnails/wfnv.2.gif" alt="Gif of a version of Work Forward NOLa"></div>
         <small>Version 2 mock-up</small>
       </a>
     </div>
