--- a/index.html
+++ b/index.html
@@ -47,10 +47,8 @@
     </svg>
   </svg>
   <header>
-    <h1>My name is Stephanie Cain. I am a product designer and I develop user-focused civic technology.</h1>
-    <p>Through my experience in the public sector I've developed an expertise in government design, user engagement and workforce. I enjoy building relationships with people and creating growth opportunities for under-served communities.</p>
-    <p><strong><a href="mailto:contact@scain.design" title="Email Stephanie Cain">Send me an email</a></strong></p>
-
+    <h1>Hello, I am Stephanie Cain.</h1>
+    <h2>I am a product designer and I develop user-focused civic technology.</h2>
     <div class="social-media">
       <svg id="social-header" xmlns="http://www.w3.org/2000/svg" width="190.4" height="60.58" viewBox="0 0 138.4 30.58">
         <defs>
@@ -116,6 +114,9 @@
       </svg>
     </div>
   </header>
+  <section>
+    <p>Through my experience in the public sector I've developed an expertise in government design, user engagement and workforce. I enjoy building relationships with people and creating growth opportunities for under-served communities.</p>
+  </section>
   <section id="featuredProjects">
     <h1>Featured Projects</h1>
     <div class="flex-boxes">
