--- a/exygy.html
+++ b/exygy.html
@@ -62,7 +62,7 @@
   </svg>
   <header>
     <h1>Hello, I am Stephanie Cain.</h1>
-    <h2>I am an interaction designer motivated by working with under-served communities to identify and develop innovative solutions and growth opportunities.</h2>
+    <h2>I am a visual designer motivated by working with under-served communities to identify and develop innovative solutions and growth opportunities.</h2>
     <div class="social-media">
       <svg id="social-header" xmlns="http://www.w3.org/2000/svg" width="190.4" height="60.58" viewBox="0 0 138.4 30.58">
         <defs>
