--- a/index.html
+++ b/index.html
@@ -21,17 +21,18 @@
 
 
 <body id="primary">
-  <div class="centered-navigation" role="banner">
-    <div class="centered-navigation-wrapper">
+  <div class="navigation" role="banner">
+    <div class="navigation-wrapper">
       <nav role="navigation">
-        <ul id="js-centered-navigation-menu" class="centered-navigation-menu show">
-          <li class="nav-link"><a href="index.html" title="Home Page">Home</a></li>
-          <li class="nav-link"><a href="about-and-contact.html" title="About and Contact">About and Contact</a></li>
-          <li class="nav-link"><a href="resume.html" title="Resume">Resume</a></li>
+        <p class="nav-title"><strong>Stephanie Cain</strong>, Visual Designer</p>
+        <ul id="js-navigation-menu" class="navigation-menu show">
+          <li class="nav-link"><a href="javascript:void(0)">Home</a></li>
+          <li class="nav-link"><a href="javascript:void(0)">Info</a></li>
+          <li class="nav-link"><a href="mailto:scain.design@gmail.com">Email</a></li>
         </ul>
+        <div class="clearfix"></div>
       </nav>
-      <a href="javascript:void(0)" id="nav-open" class="centered-navigation-mobile-menu" onclick="menuToggle()">Open Menu</a>
-      <a href="javascript:void(0)" id="nav-close" class="centered-navigation-mobile-menu" onclick="menuToggle()">Close Menu</a>
+      <a href="javascript:void(0)" id="js-navigation-mobile-menu" class="navigation-mobile-menu">Open Menu</a>
     </div>
   </div>
   <svg id="svg-bg" width="100%" height="330px" xmlns="http://www.w3.org/2000/svg" xlink="http://www.w3.org/1999/xlink" version="1.1">
@@ -48,7 +49,7 @@
   </svg>
   <header>
     <h1>Hello, I am Stephanie Cain.</h1>
-    <h2>I am a product designer and I develop user-focused civic technology.</h2>
+    <h2>I am a visual designer and I develop user-focused civic technology.</h2>
     <div class="social-media">
       <svg id="social-header" xmlns="http://www.w3.org/2000/svg" width="190.4" height="60.58" viewBox="0 0 138.4 30.58">
         <defs>
