--- a/exygy.html
+++ b/exygy.html
@@ -33,19 +33,20 @@
 </head>
 
 
-<body id="primary">
-  <div class="centered-navigation" role="banner">
-    <div class="centered-navigation-wrapper">
+<body id="primary" class="exygy">
+  <div class="navigation" role="banner">
+    <div class="navigation-wrapper">
       <nav role="navigation">
-        <ul id="js-centered-navigation-menu" class="centered-navigation-menu show">
+        <p class="nav-title"><strong>Stephanie Cain</strong>, Visual Designer</p>
+        <ul id="js-navigation-menu" class="navigation-menu show">
           <li class="nav-link"><a href="#primary" title="Return to Top">Return to Top</a></li>
           <li class="nav-link"><a href="#about" title="About">About</a></li>
           <li class="nav-link"><a href="#featuredProjects" title="About">Featured Projects</a></li>
-          <li class="nav-link"><a href="#contact" title="Contact">Contact</a></li>
+          <li class="nav-link"><a href="mailto:scain.design@gmail.com" title="Email Stephanie Cain">Email</a></li>
         </ul>
+        <div class="clearfix"></div>
       </nav>
-      <a href="javascript:void(0)" id="nav-open" class="centered-navigation-mobile-menu" onclick="menuToggle()">Open Menu</a>
-      <a href="javascript:void(0)" id="nav-close" class="centered-navigation-mobile-menu" onclick="menuToggle()">Close Menu</a>
+      <a href="javascript:void(0)" id="js-navigation-mobile-menu" class="navigation-mobile-menu">Open Menu</a>
     </div>
   </div>
   <svg id="svg-bg" width="100%" height="330px" xmlns="http://www.w3.org/2000/svg" xlink="http://www.w3.org/1999/xlink" version="1.1">
