--- a/info.html
+++ b/info.html
@@ -4,8 +4,8 @@
 <head>
   <meta charset="utf-8">
 
-  <title>Stephanie Cain's Online Portfolio</title>
-  <meta name="description" content="About and Contact Information for Stephanie Cain">
+  <title>Information about Stephanie Cain</title>
+  <meta name="description" content="Information about Stephanie Cain">
   <meta name="author" content="Stephanie Cain">
   <meta name="viewport" content="width=device-width, initial-scale=1">
 
@@ -18,18 +18,19 @@
   <link rel="stylesheet" href="assets/style/css/main.css">
 </head>
 
-<body id="secondary" class="about">
-  <div class="centered-navigation" role="banner">
-    <div class="centered-navigation-wrapper">
+<body id="secondary" class="info">
+  <div class="navigation" role="banner">
+    <div class="navigation-wrapper">
       <nav role="navigation">
-        <ul id="js-centered-navigation-menu" class="centered-navigation-menu show">
-          <li class="nav-link"><a href="index.html" title="Home Page">Home</a></li>
-          <li class="nav-link"><a href="about-and-contact.html" title="About and Contact">About and Contact</a></li>
-          <li class="nav-link"><a href="resume.html" title="Resume">Resume</a></li>
+        <p class="nav-title"><strong>Stephanie Cain</strong>, Visual Designer</p>
+        <ul id="js-navigation-menu" class="navigation-menu show">
+          <li class="nav-link"><a href="index.html" title="Home">Home</a></li>
+          <li class="nav-link"><a href="info.html" title="Info">Info</a></li>
+          <li class="nav-link"><a href="mailto:scain.design@gmail.com" title="Email Stephanie Cain">Email</a></li>
         </ul>
+        <div class="clearfix"></div>
       </nav>
-      <a href="javascript:void(0)" id="nav-open" class="centered-navigation-mobile-menu" onclick="menuToggle()">Open Menu</a>
-      <a href="javascript:void(0)" id="nav-close" class="centered-navigation-mobile-menu" onclick="menuToggle()">Close Menu</a>
+      <a href="javascript:void(0)" id="js-navigation-mobile-menu" class="navigation-mobile-menu">Open Menu</a>
     </div>
   </div>
   <section id="project-container">
