Updated home page link
#

--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
     <div class="centered-navigation-wrapper">
       <nav role="navigation">
         <ul id="js-centered-navigation-menu" class="centered-navigation-menu show">
-          <li class="nav-link"><a href="index.html" title="Home Page">Home</a></li>
+          <li class="nav-link"><a href="#" title="Home Page">Home</a></li>
           <li class="nav-link"><a href="about-and-contact.html" title="About and Contact">About and Contact</a></li>
           <li class="nav-link"><a href="resume.html" title="Resume">Resume</a></li>
         </ul>
