Fixed home link
Wasn’t showing up

--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
       <nav role="navigation">
         <p class="nav-title"><strong>Stephanie Cain</strong>, Visual Designer</p>
         <ul id="js-navigation-menu" class="navigation-menu show">
-          <li class="nav-link"><a href="#" title="Home"></a></li>
+          <li class="nav-link"><a href="javascript:void(0)" title="Home">Home</a></li>
           <li class="nav-link"><a href="info.html" title="Info">Info</a></li>
           <li class="nav-link"><a href="mailto:scain.design@gmail.com">Email</a></li>
         </ul>
